--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -87,7 +87,7 @@
 
     <script type="text/javascript">
         $(document).ready(function(){
-            var socket = io("192.168.1.6:5000");
+            var socket = io("https://talitasdias.github.io/Chat-online/templates/homepage.html");
             socket.on("connect", function(){
                 console.log("usuario conectou")
             });
